--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="email-container">
         <div style="width: 100%; height: 2440px; position: relative; background: white; overflow: hidden; border-radius: 25px">
             <div style="width: 393px; height: 510px; left: 0px; top: 220px; position: absolute; background: #2A306A; border-radius: 25px"></div>
-            <img style="width: 393px; height: 264px; left: 0px; top: 1087px; position: absolute" src="https://placehold.co/393x264" />
+            <img style="width: 393px; height: 264px; left: 0px; top: 1087px; position: absolute; object-fit: cover;" src="IMG/nicola-bertozzi.jpg" alt="Nicola Bertozzi" />
             <div style="width: 393px; height: 510px; left: 0px; top: 1327px; position: absolute; background: #DF6E1C; border-radius: 25px"></div>
             <div style="width: 363px; left: 15px; top: 425px; position: absolute; text-align: center; color: white; font-size: 36px; font-family: Arial; font-weight: 700; word-wrap: break-word">Ciao!</div>
             <div style="width: 363px; left: 15px; top: 2169px; position: absolute; text-align: center; color: #DF6E1C; font-size: 36px; font-family: Arial; font-weight: 700; word-wrap: break-word">A presto!</div>
@@ -40,8 +40,7 @@
             <div style="width: 363px; left: 15px; top: 944px; position: absolute; text-align: center"><span style="color: #2A306A; font-size: 16px; font-family: Arial; font-weight: 400; word-wrap: break-word">spesso bastano pochi minuti per </span><span style="color: #2A306A; font-size: 16px; font-family: Arial; font-weight: 700; word-wrap: break-word">capire quali rischi reali possono riguardare la tua azienda e quali soluzioni potrebbero darti maggiore tranquillità.</span></div>
             <div style="width: 363px; left: 15px; top: 640px; position: absolute; text-align: center; color: white; font-size: 16px; font-family: Arial; font-weight: 400; word-wrap: break-word">Non volevo disturbarti, ma solo assicurarmi che avessi avuto modo di vedere quel messaggio.</div>
             <div style="width: 111px; height: 116px; left: 141px; top: 271px; position: absolute; overflow: hidden">
-                <div style="width: 74.68px; height: 88.62px; left: 0px; top: 27.38px; position: absolute; background: #DF6E1C"></div>
-                <div style="width: 104.67px; height: 97.75px; left: 6.33px; top: 0px; position: absolute; background: white"></div>
+                <img src="IMG/simbolo-insurance.svg" alt="Insurance Logo" style="width: 100%; height: 100%; object-fit: contain;">
             </div>
             <div style="width: 363px; left: 15px; top: 1357px; position: absolute; text-align: center"><span style="color: white; font-size: 20px; font-family: Arial; font-weight: 400; word-wrap: break-word">Se ti fa piacere, possiamo fissare un appuntamento anche telefonico o online, in un orario a te comodo.<br/></span><span style="color: white; font-size: 24px; font-family: Arial; font-weight: 700; word-wrap: break-word">Sarà un confronto semplice, diretto e cucito attorno alle tue esigenze.</span></div>
             <div style="width: 267px; height: 44px; left: 63px; top: 1626px; position: absolute; border-radius: 50px; border: 2px white solid"></div>
@@ -50,20 +49,13 @@
             <div style="width: 267px; height: 18px; left: 63px; top: 1639px; position: absolute; text-align: center; color: white; font-size: 16px; font-family: Arial; font-weight: 400; word-wrap: break-word">insurancelucca@gmail.com</div>
             <div style="width: 267px; height: 18px; left: 63px; top: 1691px; position: absolute; text-align: center; color: white; font-size: 20px; font-family: Arial; font-weight: 400; word-wrap: break-word">347 297 8160</div>
             <div style="width: 363px; left: 15px; top: 1563px; position: absolute; text-align: center; color: white; font-size: 16px; font-family: Arial; font-weight: 400; word-wrap: break-word"> Per qualsiasi informazione o per fissare la consulenza, puoi contattarci qui:</div>
-            <div style="width: 237px; height: 213px; left: 78px; top: 1894px; position: absolute; overflow: hidden">
-                <div style="width: 98.27px; height: 115.52px; left: 44.31px; top: 35.70px; position: absolute; background: #DF6E1C"></div>
-                <div style="width: 137.73px; height: 127.43px; left: 52.64px; top: 0px; position: absolute; background: #2A306A"></div>
-                <div style="width: 31.54px; height: 40.23px; left: 15.36px; top: 172.77px; position: absolute; background: #2A306A"></div>
-                <div style="width: 5.45px; height: 39.15px; left: 0px; top: 173.19px; position: absolute; background: #2A306A"></div>
-                <div style="width: 29.04px; height: 28.13px; left: 157.30px; top: 184.87px; position: absolute; background: #2A306A"></div>
-                <div style="width: 48.17px; height: 27.81px; left: 105.71px; top: 184.73px; position: absolute; background: #2A306A"></div>
-                <div style="width: 27.12px; height: 27.81px; left: 78.88px; top: 185.19px; position: absolute; background: #2A306A"></div>
-                <div style="width: 23.31px; height: 27.24px; left: 213.69px; top: 185.22px; position: absolute; background: #2A306A"></div>
-                <div style="width: 25.04px; height: 28.01px; left: 52.64px; top: 184.88px; position: absolute; background: #2A306A"></div>
-                <div style="width: 27.60px; height: 28.10px; left: 187.57px; top: 184.88px; position: absolute; background: #2A306A"></div>
+            <div style="width: 237px; height: 213px; left: 78px; top: 1894px; position: absolute; overflow: hidden; display: flex; align-items: center; justify-content: center;">
+                <img src="IMG/insurance-logo 2.svg" alt="Insurance Lucca Logo" style="width: 100%; height: 100%; object-fit: contain;">
             </div>
             <div style="width: 168px; left: 132px; top: 1744px; position: absolute; text-align: center; color: white; font-size: 20px; font-family: Arial; font-weight: 400; word-wrap: break-word">@insurance_lucca</div>
-            <div style="width: 21.58px; height: 21.58px; left: 104px; top: 1746px; position: absolute; background: white"></div>
+            <div style="width: 21.58px; height: 21.58px; left: 104px; top: 1746px; position: absolute;">
+                <img src="IMG/instagram-brands-solid-full.svg" alt="Instagram" style="width: 100%; height: 100%; object-fit: contain;">
+            </div>
             
             <!-- Footer -->
             <div style="width: 100%; height: 120px; left: 0px; top: 2320px; position: absolute; background: #2A306A; display: flex; align-items: center; justify-content: center;">
