Cambiato colore icona Instagram in bianco

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
             <div style="width: 168px; left: 132px; top: 1744px; position: absolute; text-align: center; color: white; font-size: 20px; font-family: Arial; font-weight: 400; word-wrap: break-word">@insurance_lucca</div>
             <div style="width: 21.58px; height: 21.58px; left: 104px; top: 1746px; position: absolute;">
-                <img src="IMG/instagram-brands-solid-full.svg" alt="Instagram" style="width: 100%; height: 100%; object-fit: contain;">
+                <img src="IMG/instagram-brands-solid-full.svg" alt="Instagram" style="width: 100%; height: 100%; object-fit: contain; filter: brightness(0) invert(1);">
             </div>
             
             <!-- Footer -->
