Collegato pulsante Instagram alla pagina @insurance_lucca

--- a/index.html
+++ b/index.html
@@ -57,11 +57,13 @@
             </div>
             
             <!-- Instagram button -->
-            <div style="width: 267px; height: 44px; left: 63px; top: 1734px; position: absolute; border-radius: 50px; border: 2px white solid"></div>
-            <div style="width: 267px; height: 44px; left: 63px; top: 1734px; position: absolute; display: flex; align-items: center; justify-content: center; gap: 8px;">
-                <img src="IMG/instagram-brands-solid-full.svg" alt="Instagram" style="width: 20px; height: 20px; object-fit: contain; filter: brightness(0) invert(1);">
-                <span style="color: white; font-size: 18px; font-family: Arial; font-weight: 400;">@insurance_lucca</span>
-            </div>
+            <a href="https://www.instagram.com/insurance_lucca/" target="_blank" style="text-decoration: none;">
+                <div style="width: 267px; height: 44px; left: 63px; top: 1734px; position: absolute; border-radius: 50px; border: 2px white solid"></div>
+                <div style="width: 267px; height: 44px; left: 63px; top: 1734px; position: absolute; display: flex; align-items: center; justify-content: center; gap: 8px; cursor: pointer;">
+                    <img src="IMG/instagram-brands-solid-full.svg" alt="Instagram" style="width: 20px; height: 20px; object-fit: contain; filter: brightness(0) invert(1);">
+                    <span style="color: white; font-size: 18px; font-family: Arial; font-weight: 400;">@insurance_lucca</span>
+                </div>
+            </a>
             
             <div style="width: 363px; left: 15px; top: 1563px; position: absolute; text-align: center; color: white; font-size: 16px; font-family: Arial; font-weight: 400; word-wrap: break-word"> Per qualsiasi informazione o per fissare la consulenza, puoi contattarci qui:</div>
             <div style="width: 237px; height: 213px; left: 78px; top: 1894px; position: absolute; overflow: hidden; display: flex; align-items: center; justify-content: center;">
