--- a/index2.html
+++ b/index2.html
@@ -30,8 +30,8 @@
         <div style="width: 100%; height: 2440px; position: relative; background: white; overflow: hidden; border-radius: 25px">
             <!-- Header fumetto arancione -->
             <div style="width: 393px; height: 155px; left: 0px; top: 0px; position: absolute; background: #DF6E1C; border-radius: 25px 25px 0px 0px"></div>
-            <div style="width: 310px; height: 60px; left: 0px; top: 155px; position: absolute; background: #DF6E1C;"></div>
-            <div style="width: 0; height: 0; left: 310px; top: 155px; position: absolute; border-left: 83px solid #DF6E1C; border-bottom: 60px solid transparent;"></div>
+            <div style="width: 305px; height: 60px; left: 0px; top: 155px; position: absolute; background: #DF6E1C;"></div>
+            <div style="width: 88px; height: 60px; left: 305px; top: 155px; position: absolute; background: #DF6E1C; border-radius: 0 0 50px 0;"></div>
             <div style="width: 363px; left: 15px; top: 62px; position: absolute; text-align: center; color: white; font-size: 40px; font-family: Arial; font-weight: 700; word-wrap: break-word">Un minuto per presentarmi?</div>
             <div style="width: 363px; left: 15px; top: 263px; position: absolute; text-align: center; color: #2A306A; font-size: 20px; font-family: Arial; font-weight: 700; word-wrap: break-word">Ciao, anche se non abbiamo ancora avuto modo di conoscerci di persona, ci tenevo a raccontarti qualcosa in più su chi siamo e su come possiamo aiutarti concretamente.</div>
             <div style="width: 363px; height: 210px; left: 15px; top: 428px; position: absolute; border-radius: 25px; border: 2px #DF6E1C solid"></div>
@@ -48,8 +48,8 @@
             <img style="width: 396px; height: 264px; left: -3px; top: 1072px; position: absolute" src="IMG/nicola-bertozzi.jpg" />
             
             <!-- Footer fumetto arancione invertito -->
-            <div style="width: 0; height: 0; left: 0px; top: 1314px; position: absolute; border-right: 83px solid #DF6E1C; border-top: 60px solid transparent;"></div>
-            <div style="width: 310px; height: 60px; left: 83px; top: 1314px; position: absolute; background: #DF6E1C;"></div>
+            <div style="width: 88px; height: 60px; left: 0px; top: 1314px; position: absolute; background: #DF6E1C; border-radius: 50px 0 0 0;"></div>
+            <div style="width: 305px; height: 60px; left: 88px; top: 1314px; position: absolute; background: #DF6E1C;"></div>
             <div style="width: 393px; height: 155px; left: 0px; top: 1374px; position: absolute; background: #DF6E1C; border-radius: 0px 0px 25px 25px"></div>
             
             <div style="width: 363px; left: 15px; top: 1353px; position: absolute; text-align: center; color: white; font-size: 20px; font-family: Arial; font-weight: 700; word-wrap: break-word">Crediamo che ogni persona meriti una protezione costruita su misura, non una polizza generica. Per questo il nostro agente, Nicola Bertozzi, segue personalmente ogni cliente e ogni percorso di tutela.</div>
