--- a/index2.html
+++ b/index2.html
@@ -47,10 +47,8 @@
             <div style="width: 337px; left: 28px; top: 976px; position: absolute; text-align: center; color: white; font-size: 16px; font-family: Arial; font-weight: 400; word-wrap: break-word">Proponiamo solo ciò che serve davvero, senza complicazioni e senza soluzioni standard</div>
             <img style="width: 396px; height: 264px; left: -3px; top: 1072px; position: absolute" src="IMG/nicola-bertozzi.jpg" />
             
-            <!-- Footer fumetto arancione invertito -->
-            <div style="width: 88px; height: 60px; left: 0px; top: 1314px; position: absolute; background: #DF6E1C; border-radius: 15px 0 0 0;"></div>
-            <div style="width: 305px; height: 60px; left: 88px; top: 1314px; position: absolute; background: #DF6E1C;"></div>
-            <div style="width: 393px; height: 155px; left: 0px; top: 1374px; position: absolute; background: #DF6E1C; border-radius: 0px 15px 15px 15px"></div>
+            <!-- Footer fumetto arancione -->
+            <div style="width: 393px; height: 215px; left: 0px; top: 1314px; position: absolute; background: #DF6E1C; border-radius: 15px 0px 15px 15px"></div>
             
             <div style="width: 363px; left: 15px; top: 1353px; position: absolute; text-align: center; color: white; font-size: 20px; font-family: Arial; font-weight: 700; word-wrap: break-word">Crediamo che ogni persona meriti una protezione costruita su misura, non una polizza generica. Per questo il nostro agente, Nicola Bertozzi, segue personalmente ogni cliente e ogni percorso di tutela.</div>
             <div style="width: 363px; left: 15px; top: 1579px; position: absolute; text-align: center; color: #2A306A; font-size: 20px; font-family: Arial; font-weight: 700; word-wrap: break-word">Se ti fa piacere, possiamo fissare un breve appuntamento  anche telefonico o online per conoscerci meglio e capire come possiamo esserti utili.</div>
